# toys

./: .bashrc  .gitattributes  .gitignore  .gitmodules  .ideavimrc  .vimrc  .vscodevimrc  .vsvimrc  Profile.ps1  README.md  clean-ipynb-output.sh  coc-settings.json  disable_wsl_firewall.ps1  init.lua  kill_all_ue_proc.ps1  makefile  pyvirtualenv_setup.ps1  setup.ps1  setup.sh
ai/gpt-tokenizer/: gpt4-tokenizer.py  play.ipynb
ai/llm/: gpt2.ipynb
ai/rl/: 1_DQN.ipynb  alias.bat
block/: .prettierrc.json
block/cross-chain/: .prettierrc.json  package.json
block/dapp-demo/: Makefile  hardhat.config.ts  package-lock.json  package.json
block/simple_chain/: go.mod
block/test/: .gitignore  .prettierrc.json  hardhat.config.ts  makefile  package-lock.json  package.json
block/transfer_test/: README.md  a  truffle-config.js
block/ts01/: index.ts  package-lock.json  package.json
block/vote/: .env  README.md  hardhat.config.ts  package-lock.json  package.json
c-cpp/: .clang-format  .clang-format.swp
c-cpp/GLFW_Test/: .clang-format  CMakeLists.txt  build.sh  compile_commands.json  makefile
c-cpp/GLFW_Test/.cache/clangd/index/: 3d_render.cc.49DC60F7E7A57854.idx  glm_test.cc.CD6EC89451563538.idx  import_texture.cc.7F2EAB0701279FEB.idx  main.cc.1AB19A24D61D38B1.idx  main.cc.31A15BEDB34AE2B6.idx  main.cc.9D253D657E38BA82.idx  obit.cc.DE83AF67495CAB2D.idx
c-cpp/GLFW_Test/src/: glm_test.cc.ex  main.cc  obit.cc  obit.cc.ex  perspective.cc  round.cc.ex  shader.cc.ex  trangle.cc.ex
c-cpp/glog/: CMakeLists.txt  compile_flags.txt  makefile  test  test.cc
c-cpp/gsh/: .clang-format  README.md  cmds.c  cmds.h  gsh  main.c  makefile
c-cpp/sdl_test/: CMakeLists.txt
c-cpp/stream_decode/h264Decoder/: CMakeLists.txt
c-cpp/stream_decode/h264Decoder/include/H264Decoder/AnnexB/: AnnexBReader.hpp
c-cpp/stream_decode/h264Decoder/src/: CMakeLists.txt
c-cpp/stream_decode/h264Decoder/src/AnnexB/: CMakeLists.txt  main.cc
c-cpp/stream_decode/h264Decoder/test/: hello.cc
c-cpp/websocket/: READEME.md  README.md  makefile  test.html
cc/CMAKE_TEMPLATE_PROJECT/: CMakeLists.txt  README.md
cc/GL/GL_engine_hou/: .gitignore  CMakeLists.txt
cc/GL/OpenGL-SuperBible/7th/: CMakeLists.txt  makefile  xmake.lua
cc/GL/OpenGL-SuperBible/7th/gltk/: CMakeLists.txt  gl_macros.h  microshit_api.h  quick_start_glfw.h  sprite_render.h  xmake.lua
cc/GL/OpenGL-SuperBible/7th/gltk/render/: sprite_render.h
cc/GL/OpenGL-SuperBible/7th/gltk/resource_manager/: resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  texture.cpp  texture.h
cc/GL/OpenGL-SuperBible/7th/gltk/utils/: class_default.h
cc/GL/OpenGL-SuperBible/7th/glutils/: gl_macros.h  xmake.lua
cc/GL/OpenGL-SuperBible/7th/glutils/resource_manager/: resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  texture.cpp
cc/GL/OpenGL-SuperBible/7th/include/: application.h  application_glfw.h  application_sdl.h  generated_body.h  path.hpp
cc/GL/OpenGL-SuperBible/7th/m_log/: level.h  log.h  xmake.lua
cc/GL/OpenGL-SuperBible/7th/pkgs/gltk/: __microshit_api_gltk.h  entry_point.cpp  entry_point.h
cc/GL/OpenGL-SuperBible/7th/pkgs/gltk/render/: sprite_render.h
cc/GL/OpenGL-SuperBible/7th/pkgs/gltk/resource_manager/: resource_manager.h
cc/GL/OpenGL-SuperBible/7th/pkgs/gltk/window/: window.h
cc/GL/OpenGL-SuperBible/7th/pkgs/m_log/: CMakeLists.txt  log.h
cc/GL/OpenGL-SuperBible/7th/res/shaders/: surface_subdivision.glsl  test.glsl
cc/GL/OpenGL-SuperBible/7th/res/shaders/sprite/: sprite.frag  sprite.vert
cc/GL/OpenGL-SuperBible/7th/src/: 3body.cc  main.cpp  triangle.cpp
cc/GL/OpenGL-SuperBible/7th/test/: rand_test.cc  xmake.lua
cc/TEMPLATE_PRJ/: CMakeLists.txt
cc/btop--/: makefile  xmake.lua
cc/cpplings/: .clang-tidy  Makefile  README.md  alias.sh  microshit.ps1  xmake.lua
cc/cuda/: vec_add.cu
cc/graphics/GL/LearnOpenGL/getstart/: CMakeLists.txt  makefile
cc/graphics/GL/LearnOpenGL/getstart/src/: glad.c  integrate_shader.cc
cc/gsh/: cmds.c
cc/gstl/: debug.h  macro.h  main.cc  printf  vector.hpp
cc/netcreep/: .gitignore
cc/scripts/: Number2Chinese.cc  any_function.cc  any_out.h  class_thread.cc  compile_flags.txt  const_pointer.cc  equation.cc  loop_base.cc  module.cc  module1.cc  nonvirtual_samename_function_call_in_polymorphic.cc  operator_priority.cc  reserve.cc  vector.cc
cc/stream_decode/: .gitignore
cc/termgin/: xmake.lua
cc/test/: makefile  map.cc  move.cc  ms.cc  priority_queue.cc  result.cc  timer.cc  type_erase_void.cc
cc/vulkan/: xmake.lua
cc/webserver/: makefile
compiler/kaleidoscope/: .gitignore
design_parttern/: xmake.lua
design_parttern/1_interface/: 1_1_adapator.cc  (+1 more)
game/motobar/: Cargo.toml  assets
game/motobar/src/: audio_decode.rs  breakout.rs  lib.rs  main.rs
hs/: recursion.hs
os/rcore/ros_2nd_EDITION/: Cargo.toml  makefile  x86_64-ros.json
os/rcore/ros_2nd_EDITION/.cargo/: config.toml
os/rcore/ros_2nd_EDITION/src/: lib.rs  main.rs  serial.rs  vga_buffer.rs
os/rcore/ros_2nd_EDITION/test/: basic_boot.rs
os/rcore/ros_2nd_EDITION/tests/: basic_boot.rs  should_panic.rs
py/: .gitignore  lagrange.py
rs/algorithm/: Cargo.toml
rs/algorithm/.cargo/: config
rs/algorithm/src/: buble_sort.rs  days.rs  heap_sort.rs  lib.rs  main.rs  merge_sort.rs  quick_sort.rs
rs/algorithm/tests/sort/: quick.rs
rs/soft_render/: Cargo.toml
rs/soft_render/src/: camera.rs  image.rs  lib.rs  line.rs  math.rs  render.rs  shader.rs  texture.rs
rs/soft_render/src/math/: algo.rs  matrix.rs  mod.rs  plane.rs  quaternion.rs  test.rs  vector.rs
rs/soft_render/src/render/: algo.rs  bresenham.rs  cpu_render.rs  interface.rs  mod.rs  viewport.rs
rs/soft_render/src/shader/: attribute.rs  mod.rs  shader.rs  uniform.rs  vertex.rs
scripts/: funny_work_index_calculator.lua
setup_misc/: .bashrc  .vimrc  .vsvimrc  Profile.ps1  _setup_node.sh  clangd.yaml  coc-settings.json  config.fish  setup.py  setup.sh
sol/: truffle-config.js
web/: one oceanic high contrast.tmTheme
wm/: helpers.cc  helpers.h  main.cc  window.h
xmake/: cmd.lua  lua_annotation.lua  rules.lua  tasks.lua
(+938 files in other folders)
