[package]
name = "motobar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.3" }#, features = ["dynamic_linking"] }
bevy_editor_pls = "0.5.0"

[profile.dev.package."*"]
opt-level = 3
