[package]
name = "algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "main"


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "qs"
path = "src/quick_sort.rs"

[[bin]]
name="ms"
path = "src/merge_sort.rs"

[[bin]]
name="bs"
path = "src/buble_sort.rs"


[dependencies]
rand = "0.8.5"


