[package]
name = "soft_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
fltk = "1.3.33"
criterion = "0.4.0"

[dependencies]
image = "0.24.5"

#[[bench]]
#name = "image_bench"
#harness = false
