[package]
name = "ros"
version = "0.1.0"
edition = "2021"
authors = ["godot42 desyourself@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile]

[profile.dev]
#panic = "abort"

[profile.release]
#panic = "abort"

[[test]]
name = "should_panic"
harness = false


[package.metadata.bootimage]
# iobase: which port addr the device should live, oxf4 is a generally unused port on x86's IO bus
# iosize: specifies the port size, 4 bytes as 0x04
test-args = [
  "-device","isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial","stdio",
  "-display","none" ]
test-success-exit-code = 33 # (0x10<<1)|1
test-timeout = 60 #sec


[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
